# sb3_distill

./: LICENSE  README.md  pyproject.toml
examples/: common.py  example_distillation.py  train_teacher.py
sb3_distill/: __init__.py  core.py  ppd.py  student_distill.py  teacher_distill.py
